fixed the lucky backgrounds so that they dont distort at various screen widths

--- a/frontend/src/components/Collect/InstanceOverlayComponents/OwnedInstance.css
+++ b/frontend/src/components/Collect/InstanceOverlayComponents/OwnedInstance.css
@@ -85,7 +85,7 @@
   flex: 1; 
 }
 
-.lucky-backdrop {
+.owned-instance .lucky-backdrop {
   position: absolute;
   top: 18%;
   left: 15%;
